examples/openssl-envoy-conf.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
      tls_context:
        common_tls_context:
          tls_certificates:
            certificate_chain: { "filename": "/etc/envoy/tls/tls.crt" }
            private_key: { "filename": "/etc/envoy/tls/tls.key" }
      filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match: { prefix: / }
                direct_response: { status: 200 }
          http_filters:
          - name: envoy.router
            config: {}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001
